--- a/app/dollar-to-real/manifest.json
+++ b/app/dollar-to-real/manifest.json
@@ -1,16 +1,23 @@
 {
   "name": "Dollar to Real",
-  "version": "1",
-  "description": "Dollar to Real - Conversor",
+  "version": "1.0",
   "manifest_version": 2,
+  "description": "Dollar to Real - Conversor",
+  "icons": {
+    "16": "images/16.png",
+    "32": "images/32.png",
+    "48": "images/64.png",
+    "64": "images/64.png",
+    "128": "images/128.png"
+  },
   "browser_action": {
     "default_title": "Dollar to Real - Conversor",
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "images/32.png",
+    "default_popup": "html/popup.html"
   },
   "commands": {
     "_execute_page_action": {
-      "description": "Copy the link to the active pipeline",
+      "description": "Faça converções de Dollar para Real",
       "suggested_key": {
         "default": "Ctrl+I",
         "mac": "MacCtrl+I"
