--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Dollar to Real",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Dollar to Real - Conversor",
+  "description": "Faça converções de Dollar para Real",
   "icons": {
     "16": "images/16.png",
     "32": "images/32.png",
